--- a/index.html
+++ b/index.html
@@ -59,33 +59,10 @@
       </div>
     </div>
     <div class="product-container" id="product">
-      <!-- <h1>Product</h1>
-      <div class="packet-container">
-        <div class="packet-card blueray">
-          <div class="image">
-            <div class="packet-overlay"></div>
-          </div>
-        </div>
-        <div class="packet-card supersin">
-          <div class="image">
-            <div class="packet-overlay"></div>
-          </div>
-        </div>
-        <div class="packet-card bluecromic">
-          <div class="image">
-            <div class="packet-overlay"></div>
-          </div>
-        </div>
-        <div class="packet-card photocromic">
-          <div class="image">
-            <div class="packet-overlay"></div>
-          </div>
-        </div>
-      </div> -->
       <h1>Partners</h1>
       <div class="button-selection">
         <i id="left" class="fa-solid fa-angle-left"></i>
-        <ul class="carousel"></ul>
+        <ul class="partner"></ul>
         <i id="right" class="fa-solid fa-angle-right"></i>
       </div>
       <h1>Products</h1>
